[package]
name = "sudoku_rust_wrapper"
version = "0.1.0"
authors = ["jonathan <jonathanvanderhout@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sudoku_rust_wrapper"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
neon-serde = "0.1.1"
serde_derive = "1.0.80"
serde = "1.0.80"
